[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garde-fou"
version = "0.1.11"
description = "Protective wrappers around paid API clients with quotas & duplicate detection"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Robin Fiévet", email = "robinfievet@gmail.com" }]
keywords = ["api", "rate-limiting", "quota", "protection", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.20",
]

[project.urls]
"Homepage" = "https://github.com/rfievet/garde-fou"
"Source" = "https://github.com/rfievet/garde-fou"
"Bug Reports" = "https://github.com/rfievet/garde-fou/issues"
"Changelog" = "https://github.com/rfievet/garde-fou/blob/main/python/CHANGELOG.md"


[tool.setuptools]
# Use src layout

[tool.setuptools.packages.find]
where = ["src"]