[metadata]
name = garde-fou
version = 0.1.1
author = Robin Fiévet
description = Protective wrappers around paid API clients
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/rfievet/garde-fou

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML>=6.0

[options.extras_require]
test =
    pytest>=7.0
    pytest-asyncio>=0.20